# xmlplus-0.2.1

./: Makefile  Makefile.in  README.md  config.status  configure  libtool  xmlplus-armv7hl.spec  xmlplus.spec
autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
examples/mails/mails/: Makefile  Makefile.am  Makefile.in  config.h  config.status  configure  configure.ac  libtool  mailsrun  main.cpp
examples/mails/mails/src/: Makefile  Makefile.am  Makefile.in
examples/mails/mails/src/NoNS/: Document.cpp
examples/mails/mails/src/NoNS/.deps/: Document.Plo
examples/mails/mails/src/NoNS/Types/: attachmentType.cpp  envelopeType.cpp  mailType.cpp  mailsType.cpp
examples/mails/mails/src/NoNS/Types/.deps/: attachmentType.Plo  envelopeType.Plo  mailType.Plo  mailsType.Plo
include/: Makefile  Makefile.in
include/XSD/: UserOps.h
src/: Makefile  Makefile.in
src/DOM/: Makefile  Makefile.in
src/DOM/.deps/: Attribute.Plo  CDATASection.Plo  CharacterData.Plo  Comment.Plo  DOMParser.Plo  Document.Plo  DocumentType.Plo  Element.Plo  ExpatParser.Plo  NamedNodeMap.Plo  Node.Plo  Stream.Plo  TextNode.Plo  XmlDecl.Plo
src/Poco/: Makefile  Makefile.in
src/Poco/.deps/: ASCIIEncoding.Plo  AtomicCounter.Plo  Bugcheck.Plo  ByteOrder.Plo  Debugger.Plo  Exception.Plo  Latin1Encoding.Plo  Latin9Encoding.Plo  Mutex.Plo  NumberFormatter.Plo  RWLock.Plo  RegularExpression.Plo  TextConverter.Plo  TextEncoding.Plo  TextIterator.Plo  (+22 more)
src/XPlus/: Makefile  Makefile.in
src/XSD/: Makefile  Makefile.in
src/tools/: Makefile  Makefile.in  xsd2cpp
(+52 files in other folders)
