AM_CXXFLAGS= -I/usr/local/include -I$(top_srcdir)/include
AM_LDFLAGS=

lib_LTLIBRARIES = libmails.la
libmails_la_LIBADD = /usr/local/lib/libxsdall.la
libmails_la_SOURCES = \
./NoNS/Types/mailType.cpp ./NoNS/Types/mailsType.cpp ./NoNS/Types/envelopeType.cpp ./NoNS/Types/attachmentType.cpp ./NoNS/Document.cpp 
